--- a/sample.html
+++ b/sample.html
@@ -7,6 +7,9 @@
         <meta name = "viewport" content = "width = device - width">
         <script src = "js/toggle-menu.js"></script>
         <link href = "css/common.css" rel = "stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@200&display=swap" rel="stylesheet">
         <link rel = "preconnect" href = "https://fonts.googleapis.com">
     </head>
     <body>
@@ -16,7 +19,7 @@
                 <a class="header-logo" href="index.html">
                     <img src="images/common/logo.png" alt="ロゴ">
                 </a>
-                <button class="toggle-menu-buttonf"></button>
+                <button class="toggle-menu-button"></button>
                 <div class="header-site-menu">
                     <nav class="site-menu">
                         <ul>
